--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -20,7 +20,7 @@
   background-image: url(../../img/Vector2.png);
   background-repeat: repeat-x;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .projectsContent h3 {
   font-size: 24px;
@@ -33,10 +33,8 @@
   margin-left: -5rem;
   margin-top: -15rem;
   cursor: default;
-  width: 100%;
-  max-width: 100vw;
-  -o-text-overflow: clip;
-     text-overflow: clip;
+  max-width: calc(100% + 4rem);
+  overflow-x: hidden;
   white-space: nowrap;
 }
 .projectCards {
@@ -63,21 +61,27 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   width: 100%;
   max-width: 1100px;
   margin-top: -135px;
   padding: 2rem;
   height: 130px;
   color: rgba(233, 234, 236, 1);
-  background: -webkit-gradient(linear, left bottom, left top, from(#000000), to(rgba(0, 0, 0, 0)));
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(#000000),
+    to(rgba(0, 0, 0, 0))
+  );
   background: -o-linear-gradient(bottom, #000000 0%, rgba(0, 0, 0, 0) 100%);
   background: linear-gradient(0deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
   border-radius: 0 0 10px 10px;
@@ -91,7 +95,13 @@
 .projectCards a:hover .cardText {
   visibility: visible;
   opacity: 1;
-  background: -webkit-gradient(linear, left bottom, left top, from(#000000), to(rgba(0, 0, 0, 0)));
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(#000000),
+    to(rgba(0, 0, 0, 0))
+  );
   background: -o-linear-gradient(bottom, #000000 0%, rgba(0, 0, 0, 0) 100%);
   background: linear-gradient(0deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
 }
@@ -118,7 +128,7 @@
   margin-top: -3rem;
   z-index: 0;
   -webkit-clip-path: ellipse(100% 100% at 50% 100%);
-          clip-path: ellipse(100% 100% at 50% 100%);
+  clip-path: ellipse(100% 100% at 50% 100%);
   background-color: white;
 }
 /* Github Link */
