--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  /* background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important; */
 }
 
 body {
